# spectrum_package

./: README.md  implementation_plan.md.resolved  pyproject.toml
src/spectrum_package/processing/: __init__.py  header.py  image.py  instrument.py  spectrum.py  velocity.py  velocity_map.py
src/spectrum_package/processing/models/: header.py  image.py  instrument.py  spectrum.py  velocity.py  velocity_map.py
src/spectrum_package/util/: __init__.py  constants.py  fits_reader.py  interpolation.py  reader.py
tests/: test.py  test_image.py
